src/file/kustomize/overlay/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file
  labels:
    app: file
spec:
  selector:
    app: file
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
