src/file/kustomize/overlay/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /file
        pathType: Prefix
        backend:
          service:
            name: file
            port:
              number: 80
